// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/HtmlMeta HtmlMeta should render base title 1`] = `
<title>
  Quilt is a versioned data portal for AWS
</title>
`;

exports[`utils/HtmlMeta HtmlMeta should render base title plus prefix title when prefix is string 1`] = `
<title>
  Specific title • Quilt is a versioned data portal for AWS
</title>
`;

exports[`utils/HtmlMeta HtmlMeta should render plus divided prefix titles when prefix is array of strings 1`] = `
<title>
  Specific title #1 • Specific title #2 • Quilt is a versioned data portal for AWS
</title>
`;
